--- a/mychatbot/mychatbot/templates/index.html
+++ b/mychatbot/mychatbot/templates/index.html
@@ -55,7 +55,7 @@ div {
 }
 
 
-
+.invert { filter: invert(100%); }
 
     </style>
     <script>
@@ -77,7 +77,7 @@ div {
 
     <div style="display: flex; flex-wrap: wrap;">
   {% for image_url in response_images %}
-  <img src="https://raw.githubusercontent.com/shankarlohar/emergency/main/{{image_url}}" width="100" height="100" alt="Image from response" style="margin: 5px;">
+  <img class="invert" src="https://raw.githubusercontent.com/shankarlohar/emergency/main/{{image_url}}" width="100" height="100" alt="Image from response" style="margin: 5px;">
   {% endfor %}
 </div>
     <pre>
